2006-04-23  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* codegen/argtypes.py (ObjectArg.write_return): Follow up on
	#169204 to add support for const-Object as return type.  This
	fixes a build problem in pygda.

2006-04-18  John Ehresman   <jpe@wingware.com>

	* setup.py: Remove support for building / installing gobject, pygtk.py,
	and dsextras.py

2006-04-16  Richard Hult  <richard@imendio.com>

	* gtk/gtkmodule.c: 
	* gtk/gtk.override: Move locale.h include from gtkmodule.c here to
	fix the build.

2006-04-13  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtkcontainer.override (pygtk_container_for_common): 
	Set an exception and jump out (Coverity)
	
	* gtk/gtk.override (_wrap_gtk_stock_list_ids): Decref py_item
	after using it (Coverity)

2006-04-06  Johan Dahlin  <johan@gnome.org>

	* gtk/__init__.py (_init): Add log handlers here
	(threads_init): Deprecated gtk.threads_*, gtk.gdk.threads_* should
	be used instead, fixes #165927 (Steve Chaplin)

	* gtk/gtk.override (_wrap_remove_log_handlers): New function,
	makes it possible to remove the handlers pygtk installs.
	Fixes #323786

	* gtk/gtkmodule.c (init_gtk): Refactor, move init_check...
	(init_gtk): Move the log handlers to gtk.override

	* gtk/gtk.override (_wrap_gtk_init_check): ..to here

	* gtk/__init__.py: Refactor, call init_check() and print warning
	if DISPLAY is not set. Fixes #316877

2006-04-05  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtktreeview.override
	(_wrap_gtk_tree_sortable_set_default_sort_func): Allow callback 
	to be set to None, found by Patrick O'Brien

	* tests/test_liststore.py (ListStoreTest.testSetDefaultSortFunc): 
	Add test

2006-04-04  Johan Dahlin  <jdahlin@async.com.br>

	* configure.in: Post release version bump

=== 2.9.0 ===
2006-04-04  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Update

2006-04-04  John Ehresman  <jpe@wingware.com>

    reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtktreeview.override:
	Make sure gtk.TreeView.cell_get_size() allows