@@ -1,5 +1,10 @@
 2006-04-23  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
+	* codegen/codegen.py:
+	* codegen/definitions.py:  Add support for (unblock-threads #t) in
+	functions and methods, which enables the generation of
+	pyg_(begin|end)_allow_threads around the C call.
+
 	* codegen/argtypes.py (ObjectArg.write_return): Follow up on
 	#169204 to add support for const-Object as return type.  This
 	fixes a build problem in pygda.
